feat: first doc, register center

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,28 @@ _book
 *.epub
 *.mobi
 *.pdf
+
+# idea
+.classpath
+.project
+webapp/WEB-INF/classes/
+lib_managed/
+project/target/*
+project/project/target/*
+project/build/target/*
+project/boot/*
+project/plugins/lib_managed/*
+project/plugins/project/*
+project/plugins/target/*
+project/plugins/src_managed/*
+target/
+.idea/*
+.idea/workspace.xml
+.idea_modules/
+*.iml
+.DS_Store
+out/
+snippets/
+*.log
+/.settings/
+.cache
